Finish latest round of revisions

--- a/extra.tex
+++ b/extra.tex
@@ -34,6 +34,7 @@ You can recreate all the plots shown here at the following website. Note that th
 \newpage
 
 \section{Magnet Strength Scans}
+\label{section:scans}
 
 This section includes the following magnet strength scans: ~
 
@@ -66,7 +67,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Plasma Temperature -- $\overline T$ }
+\hiddensubsection{ \hyperref[section:scans]{ Plasma Temperature -- $\overline T$ } }
   \label{subsection:scan_T_bar}
 
 \begin{figure*}[h!]
@@ -136,7 +137,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Plasma Density -- $\overline n$ }
+\hiddensubsection{ \hyperref[section:scans]{ Plasma Density -- $\overline n$ } }
   \label{subsection:scan_n_bar}
 
 \begin{figure*}[h!]
@@ -207,7 +208,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Plasma Current -- $I_P$ }
+\hiddensubsection{ \hyperref[section:scans]{ Plasma Current -- $I_P$ } }
   \label{subsection:scan_I_P}
 
 \begin{figure*}[h!]
@@ -277,7 +278,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Major Radius -- $R_0$ }
+\hiddensubsection{ \hyperref[section:scans]{ Major Radius -- $R_0$ } }
   \label{subsection:scan_R_0}
 
 \begin{figure*}[h!]
@@ -347,7 +348,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Plasma Pressure -- $\overline p$ }
+\hiddensubsection{ \hyperref[section:scans]{ Plasma Pressure -- $\overline p$ } }
   \label{subsection:scan_p_bar}
 
 \begin{figure*}[h!]
@@ -417,7 +418,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Confinement Time -- $\tau_E$ }
+\hiddensubsection{ \hyperref[section:scans]{ Confinement Time -- $\tau_E$ } }
   \label{subsection:scan_tau_E}
 
 \begin{figure*}[h!]
@@ -487,7 +488,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Current Drive Efficiency -- $\eta_{CD}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Current Drive Efficiency -- $\eta_{CD}$ } }
   \label{subsection:scan_eta_CD}
 
 \begin{figure*}[h!]
@@ -557,7 +558,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Bootstrap Fraction  -- $f_{BS}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Bootstrap Fraction  -- $f_{BS}$ } }
   \label{subsection:scan_f_BS}
 
 \begin{figure*}[h!]
@@ -627,7 +628,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Magnetic Energy -- $W_M$ }
+\hiddensubsection{ \hyperref[section:scans]{ Magnetic Energy -- $W_M$ } }
   \label{subsection:scan_W_M}
 
 \begin{figure*}[h!]
@@ -697,7 +698,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Cost-per-Watt -- $C_W$ }
+\hiddensubsection{ \hyperref[section:scans]{ Cost-per-Watt -- $C_W$ } }
   \label{subsection:scan_C_W}
 
 \begin{figure*}[h!]
@@ -767,7 +768,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Divertor Head Load -- $q_{DV}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Divertor Head Load -- $q_{DV}$ } }
   \label{subsection:scan_q_DV}
 
 \begin{figure*}[h!]
@@ -837,7 +838,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Normalized Beta Normal -- $(\beta_N)_{norm} $ }
+\hiddensubsection{ \hyperref[section:scans]{ Normalized Beta Normal -- $(\beta_N)_{norm} $ } }
   \label{subsection:scan_norm_beta_N}
 
 \begin{figure*}[h!]
@@ -907,7 +908,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Normalized Kink Safety Factor -- $(q_{95})_{norm}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Normalized Kink Safety Factor -- $(q_{95})_{norm}$ } }
   \label{subsection:scan_norm_q_95}
 
 \begin{figure*}[h!]
@@ -977,7 +978,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Normalized Wall Loading  -- $(P_W)_{norm}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Normalized Wall Loading  -- $(P_W)_{norm}$ } }
   \label{subsection:scan_norm_P_W}
 
 \begin{figure*}[h!]
@@ -1047,7 +1048,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Fusion Power -- $P_F$ }
+\hiddensubsection{ \hyperref[section:scans]{ Fusion Power -- $P_F$ } }
   \label{subsection:scan_P_F}
 
 \begin{figure*}[h!]
@@ -1117,7 +1118,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Blanket Thickness -- $b$ }
+\hiddensubsection{ \hyperref[section:scans]{ Blanket Thickness -- $b$ } }
   \label{subsection:scan_b}
 
 \begin{figure*}[h!]
@@ -1187,7 +1188,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ TF Coil Thickness -- $c$ }
+\hiddensubsection{ \hyperref[section:scans]{ TF Coil Thickness -- $c$ } }
   \label{subsection:scan_c}
 
 \begin{figure*}[h!]
@@ -1257,8 +1258,8 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Central Solenoid Thickness -- $d$ }
-  \label{subsection:scan_d}
+\hiddensubsection{ \hyperref[section:scans]{ Central Solenoid Thickness -- $d$ } }
+  \label{subsection:scan_d} 
 
 \begin{figure*}[h!]
     \centering
@@ -1327,7 +1328,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{ Central Solenoid Height -- $h_{CS}$ }
+\hiddensubsection{ \hyperref[section:scans]{ Central Solenoid Height -- $h_{CS}$ } }
   \label{subsection:scan_h_CS}
 
 \begin{figure*}[h!]
@@ -1397,7 +1398,7 @@ This section includes the following magnet strength scans: ~
 
 \newpage
 
-\subsection*{Central Solenoid Inner Radius -- $R_{CS}$}
+\hiddensubsection{\hyperref[section:scans]{ Central Solenoid Inner Radius -- $R_{CS}$} }
   \label{subsection:scan_R_CS}
 
 \begin{figure*}[h!]
@@ -1463,10 +1464,8 @@ This section includes the following magnet strength scans: ~
 \end{figure*}
 
 
-
-
-
 \section{Cost Sensitivity Studies}
+\label{section:studies}
 
 This section includes the following cost sensitivity studies: ~
 
@@ -1492,7 +1491,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Enhancement Factor -- $H$ }
+\hiddensubsection{ \hyperref[section:studies]{ Enhancement Factor -- $H$ } }
   \label{subsection:sensitivity_H}
 
 \begin{figure*}[h!]
@@ -1562,7 +1561,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Physics Gain -- $Q$ }
+\hiddensubsection{ \hyperref[section:studies]{ Physics Gain -- $Q$ } }
   \label{subsection:sensitivity_Q}
 
 \begin{figure*}[h!]
@@ -1632,7 +1631,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Flattop Duration -- $\tau_{FT}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Flattop Duration -- $\tau_{FT}$ } }
   \label{subsection:sensitivity_tau_FT}
 
 \begin{figure*}[h!]
@@ -1702,7 +1701,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Greenwald Fraction -- $N_G$ }
+\hiddensubsection{ \hyperref[section:studies]{ Greenwald Fraction -- $N_G$ } }
   \label{subsection:sensitivity_N_G}
 
 \begin{figure*}[h!]
@@ -1772,7 +1771,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Dilution Factor -- $f_D$ }
+\hiddensubsection{ \hyperref[section:studies]{ Dilution Factor -- $f_D$ } }
   \label{subsection:sensitivity_f_D}
 
 \begin{figure*}[h!]
@@ -1842,7 +1841,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Effective Charge -- $Z_{eff}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Effective Charge -- $Z_{eff}$ } }
   \label{subsection:sensitivity_Z_eff}
 
 \begin{figure*}[h!]
@@ -1912,7 +1911,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Inverse Aspect Ratio -- $\epsilon$ }
+\hiddensubsection{ \hyperref[section:studies]{ Inverse Aspect Ratio -- $\epsilon$ } }
   \label{subsection:sensitivity_epsilon}
 
 \begin{figure*}[h!]
@@ -1982,7 +1981,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Elongation -- $\kappa_{95}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Elongation -- $\kappa_{95}$ } }
   \label{subsection:sensitivity_kappa_95}
 
 \begin{figure*}[h!]
@@ -2052,7 +2051,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Triangularity -- $\delta_{95}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Triangularity -- $\delta_{95}$ } }
   \label{subsection:sensitivity_delta_95}
 
 \begin{figure*}[h!]
@@ -2122,7 +2121,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Density Peaking Factor -- $\nu_n$ }
+\hiddensubsection{ \hyperref[section:studies]{ Density Peaking Factor -- $\nu_n$ } }
   \label{subsection:sensitivity_nu_n}
 
 \begin{figure*}[h!]
@@ -2192,7 +2191,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Temperature Peaking Factor -- $\nu_T$ }
+\hiddensubsection{ \hyperref[section:studies]{ Temperature Peaking Factor -- $\nu_T$ } }
   \label{subsection:sensitivity_nu_T}
 
 \begin{figure*}[h!]
@@ -2262,7 +2261,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Internal Inductance -- $l_i$ }
+\hiddensubsection{ \hyperref[section:studies]{ Internal Inductance -- $l_i$ } }
   \label{subsection:sensitivity_l_i}
 
 \begin{figure*}[h!]
@@ -2332,7 +2331,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Max Beta Normal -- $(\beta_N)_{max}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Max Beta Normal -- $(\beta_N)_{max}$ } }
   \label{subsection:sensitivity_max_beta_N}
 
 \begin{figure*}[h!]
@@ -2402,7 +2401,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Max Kink Safety Factor -- $({q_{95}})_{max}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Max Kink Safety Factor -- $({q_{95}})_{max}$ } }
 \label{subsection:sensitivity_max_q_95}
 
 \begin{figure*}[h!]
@@ -2472,7 +2471,7 @@ This section includes the following cost sensitivity studies: ~
 
 \newpage
 
-\subsection*{ Max Wall Loading -- $({P_W})_{max}$ }
+\hiddensubsection{ \hyperref[section:studies]{ Max Wall Loading -- $({P_W})_{max}$ } }
   \label{subsection:sensitivity_max_P_W}
 
 \begin{figure*}[h!]
