--- a/main.bib
+++ b/main.bib
@@ -15,7 +15,7 @@
 
 @article{eupulsed_2,
   title={{Overview of the design approach and prioritization of R\&D activities towards an EU DEMO}},
-  author={Federici, G and Bachmann, C and Biel, Wolfgang and Boccaccini, L and Cismondi, F and others},
+  author={Federici, G and Bachmann, C and Biel, Wolfgang and Boccaccini, L and Cismondi, F and Ciattaglia, S and Coleman, M and Day, C and Diegele, E and Franke, T and others},
   journal={Fusion Engineering and Design},
   volume={109},
   pages={1464--1474},
@@ -25,7 +25,7 @@
 
 @article{ussteady,
   title={{The ARIES advanced and conservative tokamak power plant study}},
-  author={Kessel, CE and Tillack, MS and Najmabadi, F and Poli, FM and Ghantous, K and Gorelenkov, N and Wang, XR and others},
+  author={Kessel, CE and Tillack, MS and Najmabadi, F and Poli, FM and Ghantous, K and Gorelenkov, N and Wang, XR and Navaei, D and Toudeshki, HH and Koehly, C and others},
   journal={Fusion Science and Technology},
   volume={67},
   number={1},
@@ -54,7 +54,7 @@
 
 @article{arc,
   title={{ARC: A compact, high-field, fusion nuclear science facility and demonstration power plant with demountable magnets}},
-  author={Sorbom, BN and Ball, J and Palmer, TR and others},
+  author={Sorbom, BN and Ball, J and Palmer, TR and Mangiarotti, FJ and Sierchio, JM and Bonoli, P and Kasten, C and Sutherland, DA and Barnard, HS and Haakonsen, CB and others},
   journal={Fusion Engineering and Design},
   volume={100},
   pages={378--405},
@@ -137,7 +137,7 @@ urldate = {2018-11-18}
 
 @article{sycomore,
   title={{DEMO reactor design using the new modular system code SYCOMORE}},
-  author={Reux, C{\'e}dric and Di Gallo, Luc and Imbeaux, Fr{\'e}d{\'e}ric and Artaud, J-F and Bernardi, P and Bucalossi, J{\'e}r{\^o}me and Ciraolo, Guido and others},
+  author={Reux, C{\'e}dric and Di Gallo, Luc and others},
   journal={Nuclear Fusion},
   volume={55},
   number={7},
@@ -157,20 +157,9 @@ urldate = {2018-11-18}
   publisher={Elsevier}
 }
 
-@article{zohm,
-  title={{On the minimum size of DEMO}},
-  author={Zohm, Hartmut},
-  journal={Fusion science and technology},
-  volume={58},
-  number={2},
-  pages={613--624},
-  year={2010},
-  publisher={Taylor \& Francis}
-}
-
 @article{aries,
   title={{An advanced computational algorithm for systems analysis of tokamak power plants}},
-  author={Dragojlovic, Zoran and Raffray, A Rene and Najmabadi, Farrokh and Kessel, Charles and Waganer, Lester and El-Guebaly, Laila and Bromberg, Leslie},
+  author={Dragojlovic, Zoran and Raffray, A Rene and Najmabadi, Farrokh and Kessel, Charles and Waganer, Lester and others},
   journal={Fusion Engineering and Design},
   volume={85},
   number={2},
@@ -245,7 +234,7 @@ urldate = {2018-11-18}
 
 @article{iterdb,
   title={{The 2008 public release of the international multi-tokamak confinement profile database}},
-  author={Roach, CM and Walters, M and Budny, RV and Imbeaux, F and Fredian, TW and Greenwald, M and Stillerman, JA and Alexander, DA and Carlsson, J and Cary, JR and others},
+  author={Roach, CM and Walters, M and Budny, RV and Imbeaux, F and Fredian, TW and Greenwald, M and others},
   journal={Nuclear Fusion},
   volume={48},
   number={12},
@@ -318,23 +307,12 @@ urldate = {2018-11-18}
 
 @article{adx,
   title={{ADX: a high field, high power density, advanced divertor and RF tokamak}},
-  author={LaBombard, B and Marmar, E and Irby, J and Terry, JL and Vieira, R and Wallace, G and Whyte, DG and Wolfe, S and Wukitch, S and Baek, S and others},
+  author={LaBombard, B and Marmar, E and Irby, J and Terry, JL and Vieira, R and Wallace, G and Whyte, DG and Wolfe, S and others},
   journal={Nuclear Fusion},
   volume={55},
   number={5},
   pages={053020},
   year={2015},
-  publisher={IOP Publishing}
-}
-
-@article{circuit,
-  title={{Tokamak circuit}},
-  author={Suzuki, Yasuo and Ninomiya, Hiromasa and Ogata, Atsushi and Kameari, Akihisa and Aikawa, Hiroshi},
-  journal={Japanese Journal of Applied Physics},
-  volume={16},
-  number={12},
-  pages={2237},
-  year={1977},
   publisher={IOP Publishing}
 }
 
@@ -383,7 +361,7 @@ urldate = {2018-11-18}
 
 @article{blanket,
   title={{Breeding blanket modules testing in ITER: an international program on the way to DEMO}},
-  author={Giancarli, L and Chuyanov, V and Abdou, M and Akiba, M and Hong, BG and L{\"a}sser, R and Pan, C and Strebkov, Y and others},
+  author={Giancarli, L and Chuyanov, V and Abdou, M and Akiba, M and Hong, BG and others},
   journal={Fusion Engineering and Design},
   volume={81},
   number={1-7},
@@ -460,7 +438,7 @@ urldate = {2018-11-18}
 
 @article{boschhale,
   title={{Improved formulas for fusion cross-sections and thermal reactivities}},
-  author={Bosch, H-S and Hale, GM},
+  author={Bosch, HS and Hale, GM},
   journal={Nuclear fusion},
   volume={32},
   number={4},
@@ -504,9 +482,8 @@ urldate = {2018-11-18}
 
 
 
-
 @article{nstx,
-  title={Overview of the physics and engineering design of NSTX upgrade},
+  title={{Overview of the physics and engineering design of NSTX upgrade}},
   author={Menard, JE and Gerhardt, S and Bell, M and Bialek, J and Brooks, A and Canik, John and Chrzanowski, J and Denault, M and Dudek, L and Gates, DA and others},
   journal={Nuclear Fusion},
   volume={52},
@@ -514,4 +491,24 @@ urldate = {2018-11-18}
   pages={083015},
   year={2012},
   publisher={IOP Publishing}
+}
+
+@BOOK{nas,
+  author    = {Mauel, Michael and Shochet, Melvyn and Back, Christina A. and Betti, Riccardo and Chapman, Ian and Forest, Cary and Fowler, T. Kenneth and Freidberg, Jeffrey and Gilgenbach, Ronald and Heidbrink, William and Herrmann, Mark and Jenko, Frank and others},
+  title     = "Final Report of the Committee on a Strategic Plan for U.S. Burning Plasma Research",
+  isbn      = "978-0-309-48743-6",
+  doi       = "10.17226/25331",
+  abstract  = "Fusion offers the prospect of virtually unlimited energy. The United States and many nations around the world have made enormous progress toward achieving fusion energy.\u00a0 With ITER scheduled to go online within a decade and demonstrate controlled fusion ten years later, now is the right time for the United States to develop plans to benefit from its investment in burning plasma research and take steps to develop fusion electricity for the nation\u2019s future energy needs. At the request of the Department of Energy, the National Academies of Sciences, Engineering, and Medicine organized a committee to develop a strategic plan for U.S. fusion research. The final report\u2019s two main recommendations are: (1) The United States should remain an ITER partner as the most cost-effective way to gain experience with a burning plasma at the scale of a power plant.\u00a0 (2) The United States should start a national program of accompanying research and technology leading to the construction of a compact pilot plant that produces electricity from fusion at the lowest possible capital cost.",
+  url       = "https://www.nap.edu/catalog/25331/final-report-of-the-committee-on-a-strategic-plan-for-us-burning-plasma-research",
+  year      = 2018,
+  publisher = "The National Academies Press",
+  address   = "Washington, DC"
+}
+
+@techreport{fesac,
+author = {Maingi, Rajesh and Lumsdaine, Arnie and Barish, Sam and White, Anne and Chacon, Luis and Gourlay, Steve and others},
+file = {:Users/dan/Library/Application Support/Mendeley Desktop/Downloaded/Fusion Energy Sciences Advisory Committee - 2018 - Fusion Energy Sciences Advisory Committee Report Transformative Enabling Capabilit(4).pdf:pdf},
+title = {{Fusion Energy Sciences Advisory Committee Report: Transformative Enabling Capabilities for Efficient Advance Toward Fusion Energy}},
+url = {https://www.iter.org/sci/Fusion},
+year = {2018}
 }
