--- a/results.tex
+++ b/results.tex
@@ -1067,9 +1067,9 @@ The more interesting result is that pulsed reactors gain no real benefit from us
     \label{fig:pulsed_samplings}
 \end{figure*}
 
-\replaced{Summarizing this subsection,}{Rehashing this section,} HTS tape is \added{one of} the best \replaced{ways}{way} to lower the cost of fusion reactors at a commercial scale. For steady-state reactors, HTS works best in the toroidal field coils ($B_0$), while the tape would fare better in the central solenoid ($B_{CS}$) of pulsed reactors. Further, both effects saturate within the range of this HTS tape, rendering more sophisticated magnetic technology unnecessary. HTS is \replaced{thus one technological advancement that could help usher in an era of}{truly the answer to} affordable fusion energy.
+\replaced{Summarizing this subsection,}{Rehashing this section,} HTS tape is \added{one of} the best \replaced{ways}{way} to lower the cost of fusion reactors at a commercial scale. For steady-state reactors, HTS works best in the toroidal field coils ($B_0$), while the tape would fare better in the central solenoid ($B_{CS}$) of pulsed reactors. Further, both effects saturate within the range of this HTS tape, rendering more sophisticated magnetic technology unnecessary. HTS is \replaced{thus one technological advancement that could help usher in an era of}{truly the answer to} affordable fusion energy.\footnote{This notion of HTS technology leading the way to affordable fusion energy is in line with the 2018 FESAC TEC\cite{fesac} and NAS burning plasma\cite{nas} reports.}
 
-\subsection{Looking at Design Alternatives}
+\subsection{Looking at Design Alternatives} 
 
 Even in this relatively simple fusion model, there are more than twenty \replaced{static}{fixed}/input variable knobs a designer can tune to improve reactor feasibility. Many have practical limits, such as being physically realizable or fitting within the ELMy H-Mode database. Thus, the goal of this subsection is to investigate some of the more interesting results. Although many more plots are available in \cref{chapter:extra}.
 
@@ -1356,6 +1356,6 @@ In a similar fashion as the bootstrap fraction results, the variable that most c
     \small{ These plots show that the Ehst-Karney model does have an optimum angle, but most likely understates its importance -- sources suggest inside launch is preferable for multiple reasons./cite{adx} }
 \end{figure*}
 
-It should be noted that the launch angle was not found to have a major impact. This may be a due to an oversimplification of the \replaced{model, as sources suggest inside launch is preferable for multiple reasons./cite{adx}}{model.}
+It should be noted that the launch angle was not found to have a major impact. This may be a due to an oversimplification of the \replaced{model, as sources suggest inside launch is preferable for multiple reasons./cite{adx} }{model.}
 
 %\end{document}
