--- a/surfaces.tex
+++ b/surfaces.tex
@@ -43,6 +43,7 @@ The last constraint, which is related to the surface curvature at $\alpha = \pi$
 Here, g is a shaping parameter approximately equal to one:
 \begin{equation}
 	g = \frac{9 - 2 \delta - 0.3 \cdot ( 1 - \delta ^2 ) }{8}
+  \label{eq:gg}
 \end{equation}
 \myequations{Shaping Parameter -- $g$}
 
