--- a/variables.tex
+++ b/variables.tex
@@ -47,7 +47,7 @@ $I_P$ & Plasma Current & MA \\
 $\overline{T}$ & Plasma Temperature & keV \\
 $\overline{n}$ & Electron Density & $10^{20} \, \textnormal{m}^{-3}$ \\
 $R_0$ &  Major Radius & m \\
-$B_0$ &  Magnetic Field & T
+$B_0$ &  Magnet Strength & T
 \end{tabular}
 \end{table}
 
