--- a/main.tex
+++ b/main.tex
@@ -59,10 +59,10 @@
 
 \pgfplotsset{compat=1.3}
 
-\usepackage[final]{changes}
-%\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
-%\usepackage{changes}
-%\definecolor{blue}{rgb}{0,0,1.}
+%\usepackage[final]{changes}
+\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
+\usepackage{changes}
+\definecolor{blue}{rgb}{0,0,1.}
 
 \let\vec\mathbf
 
@@ -76,9 +76,14 @@
 
 \setlength{\jot}{2.25ex}
 
-\includeonly{contents,biblio,bootstrap,lhcd} 
+%\includeonly{contents,biblio,future}
 
 \interfootnotelinepenalty=10000
+
+\newcommand{\hiddensubsection}[1]{
+    \stepcounter{subsection}
+    \subsection*{\arabic{chapter}.\arabic{section}.\arabic{subsection}\hspace{1em}{#1}}
+}
 
 \begin{document}
 
