Get document in final version form

--- a/main.tex
+++ b/main.tex
@@ -59,10 +59,10 @@
 
 \pgfplotsset{compat=1.3}
 
-%\usepackage[final]{changes}
-\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
-\usepackage{changes}
-\definecolor{blue}{rgb}{0,0,1.}
+\usepackage[final]{changes}
+%\definecolor{blue}{rgb}{0.6039, 0.0549, 0.1647}
+%\usepackage{changes}
+%\definecolor{blue}{rgb}{0,0,1.}
 
 \let\vec\mathbf
 
